--- a/bower.json
+++ b/bower.json
@@ -9,5 +9,9 @@
   "private": true,
   "dependencies": {
     "angular": "~1.2.20"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.2.21",
+    "jasmine": "~2.0.1"
   }
 }
